reverse look up geolocation

--- a/project/project.ipynb
+++ b/project/project.ipynb
@@ -413,6 +413,128 @@
     }
    },
    "id": "56c68ea51f4a8941"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Country: France\n",
+      "Region: Île-de-France\n",
+      "Area: 105.4 km² (40.7 sq mi)\n",
+      "Elevation: 28–131 m (92–430 ft) · (avg. 78 m or 256 ft)\n",
+      "Department: Paris\n",
+      "Intercommunality: Métropole du Grand Paris\n",
+      "Subdivisions: 20 arrondissements\n",
+      "\n",
+      "4-star hotel · Paris\n",
+      "\n",
+      "4-star hotel · Paris\n",
+      "\n",
+      "4-star hotel · Paris\n",
+      "\n",
+      "4-star hotel · Paris\n",
+      "\n",
+      "3-star hotel · Paris\n",
+      "\n",
+      "4-star hotel · Paris\n",
+      "\n",
+      "3-star hotel · Paris\n",
+      "\n",
+      "4-star hotel · Paris\n",
+      "\n",
+      "4-star hotel · Paris\n",
+      "\n",
+      "3-star hotel · Paris\n",
+      "\n",
+      "3-star hotel · Paris\n",
+      "\n",
+      "3-star hotel · Paris\n",
+      "\n",
+      "4-star hotel · Paris\n",
+      "\n",
+      "3-star hotel · Paris\n",
+      "\n",
+      "3-star hotel · Paris\n",
+      "\n",
+      "4-star hotel · Paris\n",
+      "\n",
+      "4-star hotel · Paris\n",
+      "\n",
+      "3-star hotel · Paris\n",
+      "\n",
+      "3-star hotel · Paris\n",
+      "\n",
+      "3-star hotel · Paris\n",
+      "Travel Solo, Not Alone · New & Trending Tours · Your Dream Trip, $99 Down · Tour Match Quiz\n",
+      "All Inclusive Packages · All Inclusive · Find A Place To Stay · All Inclusive Deals\n"
+     ]
+    }
+   ],
+   "source": [
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.keys import Keys\n",
+    "from selenium.webdriver.chrome.service import Service\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "\n",
+    "# Initialize WebDriver\n",
+    "service = Service(ChromeDriverManager().install())\n",
+    "driver = webdriver.Chrome(service=service)\n",
+    "\n",
+    "CITY= 'Paris'\n",
+    "\n",
+    "try:\n",
+    "    # Open Google Maps\n",
+    "    driver.get(f\"https://www.bing.com/maps?q={CITY}\")\n",
+    "\n",
+    "    # Wait for the search box to be present\n",
+    "    wait = WebDriverWait(driver, 10)\n",
+    "    \n",
+    "    #search_box = wait.until(EC.presence_of_element_located((By.NAME, \"q\")))\n",
+    "    #search_box.clear()\n",
+    "    #search_box.send_keys(\"city:Duluth\")\n",
+    "    #search_box.send_keys(Keys.RETURN)\n",
+    "    \n",
+    "   # Wait for the page to load and locate elements\n",
+    "       # Wait for the page to load and locate elements with class 'b_factrow'\n",
+    "    wait.until(EC.presence_of_all_elements_located((By.CLASS_NAME, 'b_factrow')))\n",
+    "    factrow_elements = driver.find_elements(By.CLASS_NAME, 'b_factrow')\n",
+    "\n",
+    "    # Extract and print information from each element\n",
+    "    for element in factrow_elements:\n",
+    "        print(element.text)\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(\"An error occurred:\", e)\n",
+    "\n",
+    "finally:\n",
+    "    # Close the browser\n",
+    "    driver.quit()\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-09T20:34:48.950274Z",
+     "start_time": "2023-11-09T20:34:45.364247Z"
+    }
+   },
+   "id": "1045435633366cb2"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "52b397738f5db770"
   }
  ],
  "metadata": {
