--- a/hw/hw4/hw4.ipynb
+++ b/hw/hw4/hw4.ipynb
@@ -1281,6 +1281,7 @@
     }
    ],
    "source": [
+    "# Using multi_class = 'ovr' fits a one-versus-rest for each class \n",
     "LRmodelOVR = linear_model.LogisticRegression(penalty=None, multi_class='ovr').fit(principal_data, iris.target)\n",
     "predictions = LRmodelOVR.predict(principal_data)\n",
     "confusion_table(predictions, iris.target)"
@@ -1330,6 +1331,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 77,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([0, 1, 2])"
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "LRmodelMultinomial.classes_"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-26T19:25:05.384734Z",
+     "start_time": "2023-11-26T19:25:05.358549Z"
+    }
+   },
+   "id": "75961e12181bd61b"
+  },
+  {
    "cell_type": "markdown",
    "id": "e8c475c6",
    "metadata": {},
@@ -1339,11 +1365,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "id": "f1ce732b",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-11-26T18:49:08.624613Z"
+     "end_time": "2023-11-26T19:26:23.261732Z",
+     "start_time": "2023-11-26T19:26:23.239640Z"
     }
    },
    "outputs": [],
@@ -1354,14 +1381,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 79,
    "outputs": [
     {
      "data": {
       "text/plain": "Truth       0   1   2\nPredicted            \n0          50   0   0\n1           0  45   5\n2           0   5  45",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>Truth</th>\n      <th>0</th>\n      <th>1</th>\n      <th>2</th>\n    </tr>\n    <tr>\n      <th>Predicted</th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>50</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0</td>\n      <td>45</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0</td>\n      <td>5</td>\n      <td>45</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 75,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1375,22 +1402,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-26T19:19:57.818039Z",
-     "start_time": "2023-11-26T19:19:57.808053Z"
+     "end_time": "2023-11-26T19:26:23.657749Z",
+     "start_time": "2023-11-26T19:26:23.626918Z"
     }
    },
    "id": "1e16b98e076dc75"
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 80,
    "outputs": [
     {
      "data": {
       "text/plain": "Truth       0   1   2\nPredicted            \n0          50   0   0\n1           0  43   5\n2           0   7  45",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>Truth</th>\n      <th>0</th>\n      <th>1</th>\n      <th>2</th>\n    </tr>\n    <tr>\n      <th>Predicted</th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>50</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0</td>\n      <td>43</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0</td>\n      <td>7</td>\n      <td>45</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 76,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1404,8 +1431,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-26T19:19:59.345003Z",
-     "start_time": "2023-11-26T19:19:59.290669Z"
+     "end_time": "2023-11-26T19:26:24.253431Z",
+     "start_time": "2023-11-26T19:26:24.248516Z"
     }
    },
    "id": "b9cb9df4d0a196db"
