--- a/project/project.ipynb
+++ b/project/project.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -40,8 +40,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-25T19:01:05.028315Z",
-     "start_time": "2023-11-25T19:01:03.788457Z"
+     "end_time": "2023-11-28T03:05:11.253599Z",
+     "start_time": "2023-11-28T03:05:08.974285Z"
     }
    },
    "id": "eac338bfb6dabac9"
@@ -67,8 +67,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-25T18:38:20.718321Z",
-     "start_time": "2023-11-25T18:38:20.705006Z"
+     "end_time": "2023-11-28T03:05:11.264280Z",
+     "start_time": "2023-11-28T03:05:11.253797Z"
     }
    },
    "id": "6dd0c89f0d8938d6"
@@ -84,8 +84,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-25T18:38:21.055396Z",
-     "start_time": "2023-11-25T18:38:20.707744Z"
+     "end_time": "2023-11-28T03:05:11.614880Z",
+     "start_time": "2023-11-28T03:05:11.257047Z"
     }
    },
    "id": "8fcc1d368e312958"
@@ -101,8 +101,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-25T18:38:21.063658Z",
-     "start_time": "2023-11-25T18:38:21.056763Z"
+     "end_time": "2023-11-28T03:05:11.627095Z",
+     "start_time": "2023-11-28T03:05:11.615156Z"
     }
    },
    "id": "87093d567ddadbb6"
@@ -119,8 +119,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-25T18:38:21.093203Z",
-     "start_time": "2023-11-25T18:38:21.066088Z"
+     "end_time": "2023-11-28T03:05:11.657578Z",
+     "start_time": "2023-11-28T03:05:11.629952Z"
     }
    },
    "id": "476a80a95ecf2f0b"
@@ -151,8 +151,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-25T18:38:21.191660Z",
-     "start_time": "2023-11-25T18:38:21.094184Z"
+     "end_time": "2023-11-28T03:05:11.755177Z",
+     "start_time": "2023-11-28T03:05:11.653892Z"
     }
    },
    "id": "efb407c681293a90"
@@ -167,8 +167,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-25T18:38:21.211050Z",
-     "start_time": "2023-11-25T18:38:21.192789Z"
+     "end_time": "2023-11-28T03:05:11.773671Z",
+     "start_time": "2023-11-28T03:05:11.756136Z"
     }
    },
    "id": "2332890511078f3"
@@ -187,8 +187,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-25T18:38:21.245066Z",
-     "start_time": "2023-11-25T18:38:21.212955Z"
+     "end_time": "2023-11-28T03:05:11.846798Z",
+     "start_time": "2023-11-28T03:05:11.774496Z"
     }
    },
    "id": "2d232e58de4703e9"
@@ -204,8 +204,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-25T18:38:21.262686Z",
-     "start_time": "2023-11-25T18:38:21.243971Z"
+     "end_time": "2023-11-28T03:05:11.856697Z",
+     "start_time": "2023-11-28T03:05:11.807829Z"
     }
    },
    "id": "d7bd4096cf999db1"
@@ -220,8 +220,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-25T18:38:21.338347Z",
-     "start_time": "2023-11-25T18:38:21.264761Z"
+     "end_time": "2023-11-28T03:05:13.307474Z",
+     "start_time": "2023-11-28T03:05:13.199976Z"
     }
    },
    "id": "98112617091e6a13"
@@ -247,8 +247,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-25T18:38:21.400348Z",
-     "start_time": "2023-11-25T18:38:21.333552Z"
+     "end_time": "2023-11-28T03:05:15.922496Z",
+     "start_time": "2023-11-28T03:05:15.837506Z"
     }
    },
    "id": "7ba1185a029d0486"
@@ -263,8 +263,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-25T18:38:21.683249Z",
-     "start_time": "2023-11-25T18:38:21.401450Z"
+     "end_time": "2023-11-28T03:05:21.861797Z",
+     "start_time": "2023-11-28T03:05:21.741224Z"
     }
    },
    "id": "3dcfb8da0a0cfa4a"
@@ -279,8 +279,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-25T18:38:21.871527Z",
-     "start_time": "2023-11-25T18:38:21.685530Z"
+     "end_time": "2023-11-28T03:05:22.097752Z",
+     "start_time": "2023-11-28T03:05:22.021248Z"
     }
    },
    "id": "de994be8952e52af"
@@ -305,8 +305,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-25T18:38:22.016809Z",
-     "start_time": "2023-11-25T18:38:22.011318Z"
+     "end_time": "2023-11-28T03:05:22.203837Z",
+     "start_time": "2023-11-28T03:05:22.192612Z"
     }
    },
    "id": "bb0cc77b716c6a2e"
@@ -321,8 +321,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-25T18:38:22.412877Z",
-     "start_time": "2023-11-25T18:38:22.409463Z"
+     "end_time": "2023-11-28T03:05:23.265730Z",
+     "start_time": "2023-11-28T03:05:23.260862Z"
     }
    },
    "id": "15bdbb76369ca757"
@@ -395,8 +395,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-25T18:38:28.384072Z",
-     "start_time": "2023-11-25T18:38:23.607160Z"
+     "end_time": "2023-11-28T03:05:28.770392Z",
+     "start_time": "2023-11-28T03:05:24.249681Z"
     }
    },
    "id": "d8fb600eff53e263"
@@ -412,16 +412,29 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-25T18:38:28.390730Z",
-     "start_time": "2023-11-25T18:38:28.384946Z"
+     "end_time": "2023-11-28T03:05:28.776575Z",
+     "start_time": "2023-11-28T03:05:28.770799Z"
     }
    },
    "id": "56c68ea51f4a8941"
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [],
+   "execution_count": 19,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Population: 1,741 (2020)\n",
+      "Weather: 12°F (-11°C), Partly Cloudy · See more\n",
+      "Mayor: Charlie Miner\n",
+      "State: Minnesota\n",
+      "\n",
+      "2-star hotel · Long Lake\n"
+     ]
+    }
+   ],
    "source": [
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.keys import Keys\n",
@@ -435,34 +448,34 @@
     "chrome_options = Options()\n",
     "chrome_options.add_argument(\"--headless\") \n",
     "service = Service(ChromeDriverManager().install())\n",
-    "driver = webdriver.Chrome(service=service, options=chrome_options)\n",
+    "driver = webdriver.Chrome(service=service)\n",
     "\n",
-    "CITY= 'Holland MI'\n",
+    "CITY= 'longlakee minisota'\n",
     "\n",
-    "# try:\n",
-    "#     driver.get(f\"https://www.bing.com/maps?q={CITY}\")\n",
-    "#     wait = WebDriverWait(driver, 10)\n",
-    "# \n",
-    "#    # Wait for the page to load and locate elements\n",
-    "#     wait.until(EC.presence_of_all_elements_located((By.CLASS_NAME, 'b_factrow')))\n",
-    "#     factrow_elements = driver.find_elements(By.CLASS_NAME, 'b_factrow')\n",
-    "# \n",
-    "#     # Extract and print information from each element\n",
-    "#     for element in factrow_elements:\n",
-    "#         print(element.text)\n",
-    "# \n",
-    "# except Exception as e:\n",
-    "#     print(\"An error occurred:\", e)\n",
-    "# \n",
-    "# finally:\n",
-    "#     # Close the browser\n",
-    "#     driver.quit()\n"
+    "try:\n",
+    "    driver.get(f\"https://www.bing.com/maps?q={CITY}\")\n",
+    "    wait = WebDriverWait(driver, 10)\n",
+    "\n",
+    "   # Wait for the page to load and locate elements\n",
+    "    wait.until(EC.presence_of_all_elements_located((By.CLASS_NAME, 'b_factrow')))\n",
+    "    factrow_elements = driver.find_elements(By.CLASS_NAME, 'b_factrow')\n",
+    "\n",
+    "    # Extract and print information from each element\n",
+    "    for element in factrow_elements:\n",
+    "        print(element.text)\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(\"An error occurred:\", e)\n",
+    "\n",
+    "finally:\n",
+    "    # Close the browser\n",
+    "    driver.quit()\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-25T19:01:00.313909Z",
-     "start_time": "2023-11-25T19:00:58.672986Z"
+     "end_time": "2023-11-28T03:06:05.661637Z",
+     "start_time": "2023-11-28T03:06:01.609026Z"
     }
    },
    "id": "1045435633366cb2"
