work on project

--- a/project/analysis.ipynb
+++ b/project/analysis.ipynb
@@ -19,7 +19,7 @@
     "collapsed": false
    },
    "source": [
-    "#### Import all libraries needed for analysis\n",
+    "#### Introduction\n",
     "\n",
     "We will use various models to predict song popularity and classify which playlist genre a song came from. Previous research [2,3] has shown that song attributes can help predict song popularity and a songs genre is correlated to various attributes of a song. We will use data from kaggle [1], a data set with ~32,000 observations and many features/attributes for each observation.\n",
     "\n",
